--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 body {
-    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background: url(../imagens2/fundo.jpg) no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -29,17 +29,18 @@ section#telefone{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 627px;
-    width: 311px;
-    background:url(../imagens/frame-iphone.png) no-repeat;
+    width: 640px;
+    height: 544px;
+    background:url(../imagens2/maiconfz-screen-1315650_640.png) no-repeat;
 }
 
 iframe#tela {
     position: relative;
-    top: 80px;
-    left: 22px;
-    width: 267px;
-    height: 471px;
+    top: 30px;
+    left: 50px;
+    width: 540px;
+    height: 300px;
+    border: 1px solid red;
 }
 
 section#redes-sociais {
